MDEV-7133: InnoDB: Assertion failure in dict_tf_is_valid

Problem is that page compressed tables currently require atomic_blobs and
that feature is not availabe currently for row_format=redundant.

Fix: Disallow page compressed create option if table row_format=redundant.